pas/l502api.pas


  {
  function L502_GetSerialList(out serials: t_l502_serial_list; flags: LongWord) : LongInt; overload;
  var
    ser_arr : p_l502_serial_array;
    devcnt: LongWord;
    res, i : LongInt;
  begin
    // получаем количество устройтв
    res := _get_serials(nil, 0, flags, devcnt);
    if (res >= 0) and (devcnt>0) then
    begin
      // выделяем память под devcnt серийных номеров
      ser_arr:=GetMemory(devcnt*L502_SERIAL_SIZE);
      //получаем их список
      res:= _get_serials(ser_arr, devcnt, flags, PLongWord(nil)^);
      if (res > 0) then
      begin
        //устанавливаем размер динамического массива
        SetLength(serials, res);
        //сохраняем полученные номера в динамический массив строк
        for i:=0 to res-1 do
          serials[i] := string(ser_arr[i]);
      end;
      //освобождаем память, выделенную под временный массив
      FreeMemory(ser_arr);
    end;
    L502_GetSerialList:= res;
  end;
  }

  function L502_GetSerialList(out serials: array of string; flags: LongWord; out devcnt: LongWord) : LongInt; overload;
  var
    ser_arr : p_x502_serial_array;
    res, i : LongInt;
  begin
    if (Length(serials) > 0) then
    begin
      ser_arr:=GetMemory(Length(serials)*X502_SERIAL_SIZE);
      // получаем количество устройтв
      res := _get_serials(ser_arr, Length(serials), flags, devcnt);
      if res >= 0 then
      begin
        //сохраняем полученные номера в динамический массив строк
        for i:=0 to res-1 do
          serials[i] := string(ser_arr[i]);
      end;
      //освобождаем память, выделенную под временный массив
      FreeMemory(ser_arr);
    end
    else
    begin
      res:= _get_serials(nil, 0, flags, devcnt);
    end;
    L502_GetSerialList:=res;
  end;

  function L502_GetSerialList(out serials: array of string; flags: LongWord) : LongInt; overload;
  begin
    L502_GetSerialList:= L502_GetSerialList(serials, flags, PCardinal(nil)^);
  end;

  function L502_GetDevRecordsList(out list: array of t_x502_devrec; flags : LongWord;  out devcnt: LongWord) : LongInt; overload;
  begin
    if (Length(list) > 0) then
    begin
      L502_GetDevRecordsList := _get_dev_records_list(list, Length(list), flags, devcnt);
    end
    else
    begin
      L502_GetDevRecordsList:= _get_dev_records_list(PCardinal(nil)^, 0, flags, devcnt);
    end;
  end;
  function L502_GetDevRecordsList(out list: array of t_x502_devrec; flags : LongWord) : LongInt; overload;
  begin
    L502_GetDevRecordsList:= L502_GetDevRecordsList(list, flags, PCardinal(nil)^);
  end;

  function L502_Open(hnd: t_l502_hnd; serial: string) : LongInt;
  begin
    L502_Open:=_open(hnd, PAnsiChar(AnsiString(serial)));
  end;

  function L502_GetErrorString(err: LongInt) : string;
  begin
    L502_GetErrorString:= string(_get_err_str(err));
  end;

  function L502_AsyncGetAdcFrame(hnd: t_l502_hnd; flags: LongWord; tout: LongWord; out data: array of Double): LongInt; stdcall;
  var err: LongInt;
      lch_cnt: LongWord;
  begin
    err:= L502_GetLChannelCount(hnd, lch_cnt);
    if err=L502_ERR_OK then
    begin
      if LongWord(Length(data)) < lch_cnt then
        err:=L502_ERR_INSUFFICIENT_ARRAY_SIZE
      else
        err:=_get_adc_frame(hnd,flags,tout,data);
    end;
    L502_AsyncGetAdcFrame:=err;
  end;

  function L502_Recv(hnd: t_l502_hnd; out buf : array of LongWord; size: LongWord; tout : LongWord): LongInt; stdcall;
  begin
    if LongWord(Length(buf)) < size then
      L502_Recv:=L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_Recv:=_recv(hnd, buf, size, tout);
  end;

  function L502_Send(hnd: t_l502_hnd; const buf : array of LongWord; size: LongWord; tout: LongWord): LongInt; stdcall;
  begin
    if LongWord(Length(buf)) < size then
      L502_Send:=L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_Send:=_send(hnd,buf,size,tout);
  end;


 function L502_ProcessAdcData(hnd: t_l502_hnd; const src: array of LongWord;
                               out dest: array of Double; var size : LongWord;
                               flags : LongWord): LongInt; stdcall;
  begin
    if (LongWord(Length(src)) < size) or (LongWord(Length(dest)) < size) then
      L502_ProcessAdcData:=L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_ProcessAdcData:=_process_adc_data(hnd, src, dest, size, flags);
  end;

  function L502_ProcessData(hnd: t_l502_hnd; const src: array of LongWord; size: LongWord;
                     flags : LongWord; out adc_data: array of Double; var adc_data_size : LongWord;
                     out din_data: array of LongWord; var din_data_size: LongWord):LongInt; stdcall;
  begin
    if (LongWord(Length(adc_data)) < adc_data_size) or (LongWord(Length(din_data)) < din_data_size)
            or (LongWord(Length(src)) < size) then
      L502_ProcessData:=L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_ProcessData:=_process_data(hnd, src, size, flags, adc_data, adc_data_size, din_data, din_data_size);
  end;

  function L502_ProcessDataWithUserExt(hnd: t_l502_hnd; const src: array of LongWord; size: LongWord;
                     flags : LongWord; out adc_data: array of Double; var adc_data_size : LongWord;
                     out din_data: array of LongWord; var din_data_size: LongWord;
                     out usr_data: array of LongWord; var usr_data_size: LongWord):LongInt; stdcall;
  begin
    if (LongWord(Length(adc_data)) < adc_data_size) or (LongWord(Length(din_data)) < din_data_size)
            or (LongWord(Length(src)) < size) or (LongWord(Length(usr_data)) < usr_data_size) then
      L502_ProcessDataWithUserExt:=L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_ProcessDataWithUserExt:=_process_data_usr(hnd, src,size,flags,adc_data,
                                adc_data_size, din_data, din_data_size, usr_data, usr_data_size);
  end;

  function L502_PrepareData(hnd: t_l502_hnd; const dac1, dac2: array of Double;
                            const digout: array of LongWord; size, flags : LongWord;
                            out out_buf: array of LongWord):LongInt; stdcall;
  begin
    L502_PrepareData:=_prepare_data(hnd, dac1, dac2, digout, size, flags, out_buf);
  end;

  function L502_BfLoadFirmware(hnd: t_l502_hnd; filename: string): LongInt; stdcall;
  begin
    L502_BfLoadFirmware:=_bf_load_firm(hnd, PAnsiChar(AnsiString(filename)));
  end;

  function L502_BfMemRead(hnd: t_l502_hnd; addr : LongWord; out regs: array of LongWord;
                                size: LongWord): LongInt; stdcall;
  begin
    if (LongWord(Length(regs)) < size) then
      L502_BfMemRead := L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_BfMemRead:=_bf_mem_read(hnd, addr, regs, size);
  end;

  function L502_BfMemWrite(hnd: t_l502_hnd; addr : LongWord;
                           const regs: array of LongWord; size: LongWord): LongInt; stdcall;
  begin
    if (LongWord(Length(regs)) < size) then
      L502_BfMemWrite := L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_BfMemWrite:=_bf_mem_write(hnd, addr, regs, size);
  end;

  function L502_BfExecCmd(hnd: t_l502_hnd; cmd_code : Word; par : LongWord;
                const snd_data : array of LongWord; snd_size : LongWord;
                out rcv_data : array of LongWord; rcv_size : LongWord;
                tout: LongWord; out recvd_size: LongWord): LongInt; stdcall;
  begin
    if (LongWord(Length(snd_data)) < snd_size) or
       (LongWord(Length(rcv_data)) < rcv_size)  then
      L502_BfExecCmd := L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_BfExecCmd:=_bf_exec_cmd(hnd, cmd_code, par, snd_data, snd_size,
                rcv_data, rcv_size, tout, recvd_size);
  end;

  function L502_FlashRead(hnd: t_l502_hnd; addr: LongWord;
                          out data: array of Byte; size: LongWord): LongInt; stdcall;
  begin
     if (LongWord(Length(data)) < size) then
      L502_FlashRead := L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_FlashRead:=_bf_mem_write(hnd, addr, data, size);
  end;
  ///Запись блока данных во Flash-память модуля.
  function L502_FlashWrite(hnd: t_l502_hnd; addr: LongWord;
                           const data: array of Byte; size: LongWord): LongInt; stdcall;
  begin
     if (LongWord(Length(data)) < size) then
      L502_FlashWrite := L502_ERR_INSUFFICIENT_ARRAY_SIZE
    else
      L502_FlashWrite:=_bf_mem_write(hnd, addr, data, size);
  end;
end.
 
